Front - Fix spacing issues

--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -21,10 +21,6 @@ h2 {
     font-weight: normal;
 }
 
-p {
-    font-weight: 200;
-}
-
 a.link {
     color: $orange;
     text-decoration: none;
@@ -73,7 +69,7 @@ a.link {
 }
 
 p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 200;
     line-height: 1.5rem;
 }
@@ -130,6 +126,7 @@ p {
 
 .getWinApp {
     background: $winBlue;
+    cursor : default;
     &:hover {
         background: $winBlueHover;
     }
@@ -150,8 +147,7 @@ header {
     display: block;
     position: relative;
     width: 100%;
-    height: 90vh;
-    max-height : 750px;
+    height: 100vh;
     background: lightgrey;
     color: white;
     background: url('../images/bg.jpg') top center repeat black;
@@ -236,7 +232,7 @@ header {
 }
 
 #features {
-    padding: 100px 0 90px 0;
+    padding: 90px 0;
     &::after {
         content: '';
         clear: both;
@@ -381,7 +377,6 @@ header {
         a {
             color : $orange;
             text-decoration: none;
-            border-bottom : 1px solid $orange;
             padding-bottom : 2px;
             transition: all 0.2s ease;
             &:hover {
@@ -449,7 +444,7 @@ footer {
         margin-left: 35px;
         a {
             text-decoration: none;
-            color: $lightGrey;
+            color: #999;
             border-bottom: 1px solid $lightGrey;
             transition: all 0.3s ease;
             &:hover {
